<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent">

    <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        android:id="@+id/activity_bacon__main"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="#616161"
        android:paddingBottom="@dimen/activity_vertical_margin"
        android:paddingLeft="@dimen/activity_horizontal_margin"
        android:paddingRight="@dimen/activity_horizontal_margin"
        android:paddingTop="@dimen/activity_vertical_margin"
        tools:context="com.example.android.withasideofbacon.Bacon_Main">

        <ImageView
            android:id="@+id/interior_image"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
            android:layout_alignParentTop="true"
            android:scaleType="centerCrop"
            android:src="@drawable/bacon_interior" />

        <TextView
            android:id="@+id/quot"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/interior_image"
            android:text="@string/quote_text_view"
            android:textColor="@color/white_text_color"
            android:textSize="20sp"
            android:textStyle="italic" />

        <TextView
            android:id="@+id/gordon"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/quot"
            android:text="@string/gordon_ramsbottom"
            android:textColor="@color/white_text_color"
            android:textSize="15sp" />

        <ImageView
            android:id="@+id/pin"
            android:layout_width="23dp"
            android:layout_height="40dp"
            android:layout_alignParentLeft="true"
            android:layout_below="@+id/gordon"
            android:paddingTop="5dp"
            android:src="@drawable/blue_pin" />

        <TextView
            android:id="@+id/address"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/gordon"
            android:layout_toRightOf="@id/pin"
            android:paddingLeft="10dp"
            android:paddingTop="10dp"
            android:text="@string/address_text_view"
            android:textColor="@color/white_text_color"
            android:textSize="20sp" />

        <ImageView
            android:id="@+id/telephone"
            android:layout_width="25dp"
            android:layout_height="25dp"
            android:layout_alignParentLeft="true"
            android:layout_below="@id/pin"
            android:layout_marginRight="5dp"
            android:layout_marginTop="5dp"
            android:src="@drawable/telephone" />

        <TextView
            android:id="@+id/telephone_number"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/address"
            android:layout_marginLeft="10dp"
            android:layout_marginTop="5dp"
            android:layout_toRightOf="@id/telephone"
            android:text="@string/phone_number"
            android:textColor="@color/white_text_color"
            android:textSize="20sp" />

        <TextView
            android:id="@+id/opening_hours"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_below="@id/telephone"
            android:paddingTop="5dp"
            android:text="@string/opening_hours_text_view"
            android:textColor="@color/white_text_color"
            android:textSize="25sp" />

        <TextView
            android:id="@+id/monday"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_below="@id/opening_hours"
            android:text="@string/monday_friday_text_view"
            android:textColor="@color/black_text_color"
            android:textSize="20sp" />

        <TextView
            android:id="@+id/eight_am"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_below="@id/monday"
            android:text="@string/opening_times_weekday_text_view"
            android:textColor="@color/black_text_color"
            android:textSize="18sp" />

        <TextView
            android:id="@+id/saturday"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_below="@id/eight_am"
            android:text="@string/saturday"
            android:textColor="@color/black_text_color"
            android:textSize="20sp" />

        <TextView
            android:id="@+id/nine_am"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_below="@+id/saturday"
            android:text="@string/saturday_opening_times_text_view"
            android:textColor="@color/black_text_color"
            android:textSize="18sp" />

        <TextView
            android:id="@+id/sunday"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_below="@id/nine_am"
            android:text="@string/sunday"
            android:textColor="@color/black_text_color"
            android:textSize="20sp" />

        <TextView
            android:id="@+id/universe"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_below="@id/sunday"
            android:text="@string/end_of_the_universe_text_view"
            android:textColor="@color/black_text_color"
            android:textSize="18sp" />

    </RelativeLayout>

</ScrollView>
